[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/Inventory_Template/Scripts/item_button.gd" type="Script" id=1]
[ext_resource path="res://addons/Inventory_Template/Assets/Icons/Itens/mana.png" type="Texture" id=2]

[node name="item_button" type="Control"]
anchor_right = 0.0546875
anchor_bottom = 0.0933333
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="z_index" type="Node2D" parent="."]

[node name="item_button" type="Button" parent="z_index"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_default_cursor_shape = 2
icon = ExtResource( 2 )
expand_icon = true

[node name="amount" type="Label" parent="z_index/item_button"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 22.0
text = "99"

[connection signal="draw" from="." to="." method="_on_item_button_draw"]
